Fix table taking too much height

--- a/src/main/frontend/css/venus.css
+++ b/src/main/frontend/css/venus.css
@@ -32,16 +32,16 @@ body, html {
 }
 
 #program-listing {
-    height: 80vh;
     font-family: Courier New, Courier, monospace;
 }
 
 #program-listing-body {
     overflow: auto;
+    height: 100%;
 }
 
 #program-listing-container {
-    min-height: 80vh;
-    max-height: 80vh;
+    min-height: 60vh;
+    max-height: 60vh;
     overflow-y: scroll;
 }
